lmao fixed fucking everything -end

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <title>Infinity craft</title>
 </head>
 <body>
-    <b>Lol LMAO  get ip grabbed bitch</b>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </div>
+    <b>funny</b>
 </body>
 </html>
