--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ body {
 </div>
 
 <div style="padding-left:16px">
-  <h2>Responsive Search Bar</h2>
-  <p>Navigation bar with a search box and a submit button inside of it.</p>
+  <h2>InfinityCraft</h2>
+  <p>This page is in development</p>
   <p>This is the Official InfinityCraft Website, Created by EndGaming10 & InfinityPlayzYT</p>
 
 </body>
