--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ body {
   background-color: #e9e9e9;
 }
 
+.container:hover .overlay {
+  opacity: 1;
+}
+
 .topnav a {
   float: left;
   display: block;
@@ -97,6 +101,13 @@ body {
   <h2>InfinityCraft</h2>
   <p>This page is in development</p>
   <p>This is the Official InfinityCraft Website, Created by EndGaming10 & InfinityPlayzYT</p>
+</div>
+<div class="container">
+  <img src="mapfucker.png" alt="Avatar" class="image">
+  <div class="overlay">
+    <div class="text">Infinitycraft map (3/25/2021)</div>
+  </div>
+</div>
 
 </body>
 </html>
