--- a/index.html
+++ b/index.html
@@ -15,8 +15,28 @@ body {
   background-color: #e9e9e9;
 }
 
-.container:hover .overlay {
-  opacity: 1;
+.container {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
 }
 
 .topnav a {
