--- a/Cities/index.html
+++ b/Cities/index.html
@@ -21,8 +21,8 @@ body {
     </button>
     <div class="dropdown-content">
       <a href="/Cities/index.html">Cities</a>
-      <a href="#">Bedwars</a>
-      <a href="#">SMP</a>
+      <a href="/Bedwars/index.html">Bedwars</a>
+      <a href="/SMP/index.html">SMP</a>
     </div>
   </div> 
 </div>
