--- a/Bedwars/index.html
+++ b/Bedwars/index.html
@@ -22,7 +22,7 @@ body {
     <div class="dropdown-content">
       <a href="/Cities/index.html">Cities</a>
       <a href="/Bedwars/index.html">Bedwars</a>
-      <a href="#">SMP</a>
+      <a href="/SMP/index.html">SMP</a>
     </div>
   </div> 
 </div>
