--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+Title1 {
+    font-family: Arial, Helvitica, sans-serif;
+}
 </style>
 </head>
 <body>
 
 <div class="topnav">
-  <a href="#home">Home</a>
+  <a href="http://www.infinitycraftmc.co.uk">Home</a>
   <a href="#news">News</a>
   <div class="dropdown">
     <button class="dropbtn">Servers
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="/Cities/index.html">Cities</a>
-      <a href="#">Bedwars</a>
+      <a href="/Cities/">Cities</a>
+      <a href="/Bedwars/index.html">Bedwars</a>
       <a href="#">SMP</a>
     </div>
   </div> 
