--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ Title1 {
   </div> 
 </div>
 
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Hover over the "Dropdown" link to see the dropdown menu.</p>
+<h3>Welcome to The InfinityCraft Website!</h3>
+<p>Here, you can find information about our network, and maybe even contribute to it!</p>
 
 </body>
 </html>
