--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@ Title1 {
     </button>
     <div class="dropdown-content">
       <a href="/Cities">Cities</a>
-      <a href="/Bedwars">Bedwars</a>
-      <a href="/SMP">SMP</a>
+      <a href="/Bedwars/index.html">Bedwars</a>
+      <a href="#">SMP</a>
     </div>
   </div> 
 </div>
 
 <h3>Welcome to The InfinityCraft Website!</h3>
 <p>Here, you can find information about our network, and maybe even contribute to it!</p>
-
+<p>Currently, this website is in the middle of being made, if you have any suggestions, then please shoot me a message on discord!</p>
+<p>Feel free to join our discord: https://discord.gg/UvAqzReS3s</p>
+    
 </body>
 </html>
