--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@ Title1 {
 
 <div class="topnav">
   <a href="http://www.infinitycraftmc.co.uk">Home</a>
-  <a href="https://www.infinitycraftnc.co.uk/About">About</a>
+  <a href="https://www.infinitycraftmc.co.uk/About">About</a>
   <a href="https://discord.gg/UvAqzReS3s">Discord</a>
+  <a href="https://store.infinitycraftmc.co.uk">Store</a>
   <div class="dropdown">
     <button class="dropbtn">Servers
       <i class="fa fa-caret-down"></i>
