--- a/About/index.html
+++ b/About/index.html
@@ -35,6 +35,6 @@ Title1 {
 <h3>About InfinityCraft</h3>
 <p></p>
 
-    
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesNrOMM_dB0vQJFUmmsM4EjCftFT10DGjJVQYuvLD8bqcLIw/viewform?embedded=true" width="300" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </body>
 </html>
