--- a/SMP/index.html
+++ b/SMP/index.html
@@ -11,11 +11,10 @@ body {
 </style>
 </head>
 <body>
-
 <div class="topnav">
   <a href="http://www.infinitycraftmc.co.uk">Home</a>
   <a href="https://www.infinitycraftnc.co.uk/About">About</a>
-  <a href="https://discord.gg/UvAqzReS3s
+  <a href="https://discord.gg/UvAqzReS3s>Discord</a>
   <div class="dropdown">
     <button class="dropbtn">Servers
       <i class="fa fa-caret-down"></i>
@@ -28,8 +27,8 @@ body {
   </div> 
 </div>
 
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Suck a Lemon</p>
+<h3>SMP</h3>
+<p>The SMP Is a multiplayer survival world, where you can create what you want!</p>
 
 </body>
 </html>
