--- a/Bedwars/index.html
+++ b/Bedwars/index.html
@@ -11,22 +11,22 @@ body {
 </style>
 </head>
 <body>
-
-<div class="topnav">
-  <a href="http://www.infinitycraftmc.co.uk">Home</a>
-  <a href="https://www.infinitycraftnc.co.uk/About">About</a>
-  <a href="https://discord.gg/UvAqzReS3s
-  <div class="dropdown">
-    <button class="dropbtn">Servers
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="/Cities/index.html">Cities</a>
-      <a href="/Bedwars/index.html">Bedwars</a>
-      <a href="/SMP/index.html">SMP</a>
-    </div>
-  </div> 
-</div>
+  <div class="topnav">
+    <a href="http://www.infinitycraftmc.co.uk">Home</a>
+    <a href="https://www.infinitycraftmc.co.uk/About">About</a>
+    <a href="https://discord.gg/UvAqzReS3s">Discord</a>
+    <a href="https://store.infinitycraftmc.co.uk">Store</a>
+    <div class="dropdown">
+      <button class="dropbtn">Servers
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="http://www.infinitycraftmc.co.uk/Cities">Cities</a>
+        <a href="http://www.infinitycraftmc.co.uk/Bedwars">Bedwars</a>
+        <a href="http://www.infinitycraftmc.co.uk/SMP">SMP</a>
+      </div>
+    </div> 
+  </div>
 
 <h3>Dropdown Menu inside a Navigation Bar</h3>
 <p>Hover over the "Dropdown" link to see the dropdown menu.</p>
