--- a/About/index.html
+++ b/About/index.html
@@ -16,21 +16,22 @@ Title1 {
 </head>
 <body>
 
-<div class="topnav">
-  <a href="http://www.infinitycraftmc.co.uk">Home</a>
-  <a href="https://www.infinitycraftnc.co.uk/About">About</a>
-  <a href="https://discord.gg/UvAqzReS3s">Discord</a>
-  <div class="dropdown">
-    <button class="dropbtn">Servers
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="/Cities">Cities</a>
-      <a href="/Bedwars">Bedwars</a>
-      <a href="/SMP">SMP</a>
-    </div>
-  </div> 
-</div>
+  <div class="topnav">
+    <a href="http://www.infinitycraftmc.co.uk">Home</a>
+    <a href="https://www.infinitycraftmc.co.uk/About">About</a>
+    <a href="https://discord.gg/UvAqzReS3s">Discord</a>
+    <a href="https://store.infinitycraftmc.co.uk">Store</a>
+    <div class="dropdown">
+      <button class="dropbtn">Servers
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="http://www.infinitycraftmc.co.uk/Cities">Cities</a>
+        <a href="http://www.infinitycraftmc.co.uk/Bedwars">Bedwars</a>
+        <a href="http://www.infinitycraftmc.co.uk/SMP">SMP</a>
+      </div>
+    </div> 
+  </div>
 
 <h3>About InfinityCraft</h3>
 <p></p>
