--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ span.onclick = function() {
 </script>
 <h3>Welcome to The InfinityCraft Website!</h3>
 <p>Here, you can find information about our network, and maybe even contribute to it!</p>
+<div class="bottom">
+  <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">All rights reserved</p>	
+</div>
 
 
 </body>
