Made main page BEUTIFUL

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="Nav.css">
     <link rel="stylesheet" href="Image.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -34,41 +35,22 @@ Title1 {
   </div> 
 </div>
 
-<img id="myImg" src="craft.png" alt="Banner" style="width:100%;max-width:300px">
+</script>
+<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">Infinitycraft</h1>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
+<div class="description">
+  <p>Infinitycraft is a Minecraft server network that has games you can play for hours!<br>Find a bug? Report it on our discord!</p>
+  
 </div>
 
-<script>
-// Get the modal
-var modal = document.getElementById("myModal");
+<div class="image">
+  <img id="myImg" src="craft.png" alt="Banner" style="width:100%;max-width:300px">
+</div>
 
-// Get the image and insert it inside the modal - use its "alt" text as a caption
-var img = document.getElementById("myImg");
-var modalImg = document.getElementById("img01");
-var captionText = document.getElementById("caption");
-img.onclick = function(){
-  modal.style.display = "block";
-  modalImg.src = this.src;
-  captionText.innerHTML = this.alt;
-}
 
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
 
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() { 
-  modal.style.display = "none";
-}
-</script>
-<h3>Welcome to The InfinityCraft Website!</h3>
-<p>Here, you can find information about our network, and maybe even contribute to it!</p>
 <div class="bottom">
-  <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">please dont steal the fucking code thanks</p>	
+  <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">don't steal the code pls</p>	
 </div>
 
 
