--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Title1 {
 <h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">Infinitycraft</h1>
 
 <div class="description">
-  <p>Infinitycraft is a Minecraft server network that has games you can play for hours!<br>Find a bug? Report it on our discord!</p>
+  <p>Infinitycraft is a Minecraft multi-server network that has min-games you can play for minutes, hours and days!<br>Find a bug? Please report it on our discord server!</p>
   
 </div>
 
