--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Title1 {
 </div>
 
 
-
+<div style="background: #111111;margin-top: 50px;text-align: center;"><a href="https://discord.gg/R4GEHpQXcY"><i class="fab fa-discord" style="color: rgb(255,255,255);font-size: 54px;margin-top: 50px;margin-bottom: 50px;"></i></a>
 <div class="bottom">
   <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">don't steal the code pls</p>	
 </div>
