--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Nav.css">
     <link rel="stylesheet" href="Image.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -39,7 +41,7 @@ Title1 {
 <h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">Infinitycraft</h1>
 
 <div class="description">
-  <p>Infinitycraft is a Minecraft multi-server network that has mini-games you can play for minutes, hours and days!<br>Find a bug? Please report it on our discord server!</p>
+  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Infinitycraft is a Minecraft multi-server network that has mini-games you can play for minutes, hours and days!<br>Find a bug? Please report it on our discord server!</p>
   
 </div>
 
@@ -48,7 +50,7 @@ Title1 {
 </div>
 
 
-<div style="background: #111111;margin-top: 50px;text-align: center;"><a href="https://discord.gg/R4GEHpQXcY"><i class="fab fa-discord" style="color: rgb(255,255,255);font-size: 54px;margin-top: 50px;margin-bottom: 50px;"></i></a>
+
   <div class="bottom">
     <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">don't steal the code pls</p>	
   </div>
