--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Title1 {
 </div>
 
 <div class="image">
-  <img id="myImg" src="craft.png" alt="Banner" style="width:100%;max-width:300px">
+  <img id="myImg" src="/Assets/craft.png" alt="Banner" style="width:100%;max-width:300px">
 </div>
 
 
