--- a/Crossiant/index.html
+++ b/Crossiant/index.html
@@ -38,9 +38,8 @@ Title1 {
 </div>
 
 
-<div class="image">
-  <img id="myImg" src="croissant.png" alt="Banner" style="width:100%;max-width:300px">
-</div>
+<img id="myImg" src="https://www.infinitycraftmc.co.uk/Assets/croissant.png" alt="Banner" style="width:100%;max-width:300px">
+
 
 
 
