--- a/croissant/index.html
+++ b/croissant/index.html
@@ -1,50 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Nav.css">
-    <link rel="stylesheet" href="Image.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-Title1 {
-    font-family: Arial, Helvitica, sans-serif;
-}
-</style>
+<title>Karen give me back my son</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen" >
 </head>
 <body>
 
-<div class="topnav">
-  <a href="http://www.infinitycraftmc.co.uk">Home</a>
-  <a href="https://www.infinitycraftmc.co.uk/About">About</a>
-  <a href="https://discord.gg/UvAqzReS3s">Discord</a>
-  <a href="https://store.infinitycraftmc.co.uk">Store</a>
-  <div class="dropdown">
-    <button class="dropbtn">Servers
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="/Cities">Cities</a>
-      <a href="/Bedwars">Bedwars</a>
-      <a href="#">SMP</a>
-    </div>
-  </div> 
-</div>
+<a href="https://en.wikipedia.org/wiki/Croissant">Croissant</a>
+<img src="croissant.jpg" alt="Croissant">
 
-
-<img id="myImg" src="https://www.infinitycraftmc.co.uk/Assets/croissant.png" alt="Banner" style="width:100%;max-width:300px">
-
-
-
-
-
-
+<p>Made by Infinity instead of the main dev for the website, I wanted to contribute and this is my way.</p>
 
 </body>
 </html>
