--- a/croissant/index.html
+++ b/croissant/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <a href="https://en.wikipedia.org/wiki/Croissant">Croissant</a>
-<img src="croissant.jpg" alt="Croissant">
+<img src="https://infinitycraftmc.co.uk/Assets/croissant.png" alt="Croissant">
 
 <p>Made by Infinity instead of the main dev for the website, I wanted to contribute and this is my way.</p>
 
