--- a/Cities/index.html
+++ b/Cities/index.html
@@ -29,8 +29,8 @@ body {
     </div> 
   </div>
 
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Hover over the "Dropdown" link to see the dropdown menu.</p>
+<h3>Cities Server</h3>
+<p>The Cities Server is the server that<br>the staff team actually bother about, it's also the one that people are most<br>people are familiar with.</p>
 
 </body>
 </html>
