correcting stuff on the cities
cum

--- a/Cities/index.html
+++ b/Cities/index.html
@@ -30,7 +30,7 @@ body {
   </div>
 
 <h3>Cities Server</h3>
-<p>The Cities Server is the server that<br>the staff team actually bother about, it's also the one that people are most<br>people are familiar with.</p>
+<p>The Cities Server is the server that the staff team actually bother about, it's also the one that people are most familiar with.<br>If you have played InfinityCraft, you've probably been on Cities most of the time since its always online.</p>
 
 </body>
 </html>
