--- a/About/index.html
+++ b/About/index.html
@@ -21,6 +21,7 @@ Title1 {
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
     <a href="https://discord.gg/UvAqzReS3s">Discord</a>
     <a href="https://store.infinitycraftmc.co.uk">Store</a>
+    <a href="https://infinitycraftmc.co.uk/croissant">Croissant</a>
     <div class="dropdown">
       <button class="dropbtn">Servers
         <i class="fa fa-caret-down"></i>
