--- a/croissant/index.html
+++ b/croissant/index.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Karen give me back my son</title>
+<title>croissant</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen" >
 </head>
 <body>
 
 <a href="https://en.wikipedia.org/wiki/Croissant">Croissant</a>
 
+<img src="https://infinitycraftmc.co.uk/Assets/croissant.png" alt="Croissant" width="100" height="100">
 
 
+<p>Made by Infinity instead of the main dev for the website, I wanted to contribute and this is my way.<br>I literally learnt HTML to make a croissant joke and to do other shit on the website I guess</p>
 
-
-
-
-
-
-
-
-
-
-
-<img src="https://infinitycraftmc.co.uk/Assets/croissant.png" alt="Croissant">
-
-<p>Made by Infinity instead of the main dev for the website, I wanted to contribute and this is my way.</p>
+<a href="https://www.infinitycraftmc.co.uk">Back to Home Page</a>
 
 </body>
 </html>
