--- a/About/index.html
+++ b/About/index.html
@@ -35,7 +35,7 @@ Title1 {
   </div>
 
 <h3>About InfinityCraft</h3>
-<p></p>
+<p>Nothing really interesting, really, theres nothing.</p>
 
 </body>
 </html>
