--- a/SMP/index.html
+++ b/SMP/index.html
@@ -30,7 +30,7 @@ body {
   </div>
 
 <h3>SMP</h3>
-<p>The SMP Is a multiplayer survival world, where you can create what you want!</p>
+<p>Just a typical SMP innit</p>
 
 </body>
 </html>
