--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@ Title1 {
 </div>
 
 </script>
-<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">Infinitycraft</h1>
+<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">The InfinityCraft Minecraft Server Network</h1>
 
 <div class="description">
-  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Infinitycraft is a Minecraft multi-server network that has mini-games you can play for minutes, hours and days!<br>Find a bug? Please report it on our discord server!</p>
+  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">InfinityCraft is a Minecraft multi-server network that has mini-games you can play for minutes, hours and days!<br>Find a bug? Please report it on our discord server!</p>
+  
+</div>
+
+<div class="description">
+  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">play.infinitycraftmc.co.uk<br>1.8+</p>
   
 </div>
 
@@ -54,7 +59,7 @@ Title1 {
 
 
   <div class="bottom">
-    <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">don't steal the code pls</p>	
+    <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">Please do not steal the code from this website, we worked hard on this instead of using WIX or something like that.</p>	
   </div>
 </div>
 
