--- a/Bedwars/index.html
+++ b/Bedwars/index.html
@@ -29,8 +29,8 @@ body {
     </div> 
   </div>
 
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Hover over the "Dropdown" link to see the dropdown menu.</p>
+<h3>Bedwars</h3>
+<p>Bedwars is a server thats broken, we will fix it as soon at possible.</p>
 
 </body>
 </html>
