--- a/croissant/index.html
+++ b/croissant/index.html
@@ -11,7 +11,7 @@
 <img src="https://infinitycraftmc.co.uk/Assets/croissant.png" alt="Croissant" width="100" height="100">
 
 
-<p>Made by Infinity instead of the main dev for the website, I wanted to contribute and this is my way.<br>I literally learnt HTML to make a croissant joke and to do other shit on the website I guess</p>
+<p>Made by Infinity instead of the main dev for the website, I wanted to contribute and this is my way.<br>I literally learnt HTML to make a croissant joke and to do other stuff on the website I guess<br>might show some of my friend at school this page, if so then hi!</p>
 
 <a href="https://www.infinitycraftmc.co.uk">Back to Home Page</a>
 
