couple changed to sus

--- a/croissant/index.html
+++ b/croissant/index.html
@@ -15,5 +15,7 @@
 
 <a href="https://www.infinitycraftmc.co.uk">Back to Home Page</a>
 
+<a href="https://www.infinitycraftmc.co.uk/sus">Sus</a>
+
 </body>
 </html>
