--- a/sus/index.html
+++ b/sus/index.html
@@ -12,7 +12,7 @@
 
 <img src="https://infinitycraftmc.co.uk/Assets/rickroll.jpg" alt="Rickroll" width="100" height="100">
 
-<h2>amogus</h2>>
+<h2>amogus</h2>
 
 <p>never gonna give you up</p>
 
