added punishment appeal tab

--- a/punishments/index.html
+++ b/punishments/index.html
@@ -11,7 +11,6 @@ body {
 </style>
 </head>
 <body>
-
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
@@ -31,8 +30,10 @@ body {
     </div> 
   </div>
 
-<h3>Cities Server</h3>
-<p>The Cities Server is the server that the staff team actually bother about, it's also the one that people are most familiar with.<br>If you have played InfinityCraft, you've probably been on Cities most of the time since its always online.</p>
+<h3>Punishment Appeals</h3>
+<p>If you would like to make a punishment appeal, please email punishmentappeals@infinitycraftmc.co.uk with this format:<br>Username:<br>Where the Punishment Was:<br>What the Punishment Was:<br>The Reason for the Punishment:<br>Who Punished You:<br>Date of Punishment (dd/MM/yyyy):<br>Duration of Punishment:<br>Why you should be Unbanned/Unmuted/Other:</p>
+
+<p>For more information, please look at the #punishment-appeals channel in the official Discord server.</p>
 
 </body>
 </html>
