--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>InfinityCraft - Home</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
+<link rel="shortcut icon" type="image/jpg" href="minecart.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Nav.css">
     <link rel="stylesheet" href="Image.css">
