Added title and favicon to all pages execpt sus and croissant

--- a/Bedwars/index.html
+++ b/Bedwars/index.html
@@ -11,6 +11,8 @@ body {
 </style>
 </head>
 <body>
+  <title>InfinityCraft - Bedwars</title>
+  <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
