--- a/About/index.html
+++ b/About/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>InfinityCraft - About</title>
+  <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
     <link rel="stylesheet" href="Nav.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
