--- a/About/index.html
+++ b/About/index.html
@@ -37,8 +37,8 @@ Title1 {
     </div> 
   </div>
 
-<h3>About InfinityCraft</h3>
-<p>Nothing really interesting, really, theres nothing.</p>
+  <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">About Infinitycraft</h3>
+    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Just a server, tbh...</p>
 
 </body>
 </html>
