--- a/Cities/index.html
+++ b/Cities/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>InfinityCraft - Cities</title>
   <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
     <link rel="stylesheet" href="Nav.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -33,8 +35,8 @@ body {
     </div> 
   </div>
 
-<h3>Cities Server</h3>
-<p>The Cities Server is the server that the staff team actually bother about, it's also the one that people are most familiar with.<br>If you have played InfinityCraft, you've probably been on Cities most of the time since its always online.</p>
+<h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">Cities Server</h3>
+<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The Cities Server is the server that the staff team actually bother about, it's also the one that people are most familiar with.<br>If you have played InfinityCraft, you've probably been on Cities most of the time since its always online.</p>
 
 </body>
 </html>
