--- a/sus/index.html
+++ b/sus/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>sus</h1>
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=OfficialRickAstley">sus</a>
 
 <img src="https://infinitycraftmc.co.uk/Assets/SUS.jpg" alt="Sus" width="100" height="100">
 
@@ -14,7 +14,7 @@
 
 <h2>amogus</h2>
 
-<p>never gonna give you up</p>
+<p>never gonna give you up<br>eat your green beans</p>
 
 <a href="https://www.infinitycraftmc.co.uk">Back to Home Page</a>
 
