Fancy ass text on all pages

--- a/About/index.html
+++ b/About/index.html
@@ -39,7 +39,7 @@ Title1 {
     </div> 
   </div>
 
-  <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">About Infinitycraft</h3>
+  <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">About InfinityCraft</h3>
     <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Just a server, tbh...</p>
 
 </body>
