--- a/SMP/index.html
+++ b/SMP/index.html
@@ -32,8 +32,7 @@ body {
     </div> 
   </div>
 
-<h3>SMP</h3>
-<p>Just a typical SMP innit</p>
-
+  <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">SMP</h3>
+    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The SMP (which stands for Survival Multiplayer) is a chill, survival server.<br>It's basically just survival, but with friends!</p>
 </body>
 </html>
