--- a/Bedwars/index.html
+++ b/Bedwars/index.html
@@ -32,8 +32,8 @@ body {
     </div> 
   </div>
 
-<h3>Bedwars</h3>
-<p>Bedwars is a server thats broken, we will fix it as soon at possible.</p>
+  <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">Bedwars</h3>
+    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This server is currently inactive due ot it being broken, we'll fix it soon.</p>
 
 </body>
 </html>
