--- a/Status/index.html
+++ b/Status/index.html
@@ -32,7 +32,7 @@ body {
     </div> 
   </div>
 
-<p>This is the current status of the server (Credit to NameMC for the HTML template)</p>
+<p>This is the current status of the server (Credit to NameMC for the HTML template)<br>(If it says 'Can't connect to server.' that means that it is offline)</p>
 
   <iframe style="width:728px;height:90px;max-width:100%;border:none;display:block;margin:auto" src="https://en.namemc.com/server/play.infinitycraftmc.co.uk/embed" width="728" height="90"></iframe>
 
