Added status to the nav bar

--- a/About/index.html
+++ b/About/index.html
@@ -27,6 +27,7 @@ Title1 {
     <a href="https://store.infinitycraftmc.co.uk">Store</a>
     <a href="https://infinitycraftmc.co.uk/croissant">Croissant</a>
     <a href="https://infinitycraftmc.co.uk/punishments">Punishment Appeals</a>
+    <a href="https://infinitycraftmc.co.uk/status">Status</a>
     <div class="dropdown">
       <button class="dropbtn">Servers
         <i class="fa fa-caret-down"></i>
