some shiddy tiddy

--- a/About/index.html
+++ b/About/index.html
@@ -41,7 +41,7 @@ Title1 {
   </div>
 
   <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">About InfinityCraft</h3>
-    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Just a server, tbh...</p>
+    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Just a server, yeah, thats it, just a server.&nbsp; &nbsp;&nbsp;</p>
 
 </body>
 </html>
