--- a/Bedwars/index.html
+++ b/Bedwars/index.html
@@ -34,7 +34,7 @@ body {
   </div>
 
   <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">Bedwars</h3>
-    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This server is currently inactive due ot it being broken, we'll fix it soon.</p>
-
+<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This server is currently inactive due ot it being broken, we'll fix it soon.</p>
+    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">(We really need to stop procrastinating...)&nbsp;</p>
 </body>
 </html>
