--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Title1 {
 <h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">The InfinityCraft Minecraft Server Network</h1>
 
 <div class="description">
-  <p style="text-align: center;color: rgb(0,0,0);font-family: Roboto, sans-serif;">InfinityCraft is a Minecraft multi-server network that you can vibe on.<br>This website is still being developed, if you find a bug, please report it in the bug reports section of our discord server.</p>
+  <p style="text-align: center;color: rgb(0,0,0);font-family: Roboto-Light, sans-serif;">InfinityCraft is a Minecraft multi-server network that you can vibe on.<br>This website is still being developed, if you find a bug, please report it in the bug reports section of our discord server.</p>
   
 </div>
 
