--- a/Cities/index.html
+++ b/Cities/index.html
@@ -25,7 +25,7 @@ body {
     <a href="https://infinitycraftmc.co.uk/punishments">Punishment Appeals</a>
     <a href="https://infinitycraftmc.co.uk/status">Status</a>
     <div class="dropdown">
-      <button class="dropbtn">Servers
+      <button class="dropbtn">Games
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
