--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Title1 {
   <a href="https://infinitycraftmc.co.uk/punishments">Punishment Appeals</a>
   <a href="https://infinitycraftmc.co.uk/status">Status</a>
   <div class="dropdown">
-    <button class="dropbtn">Servers
+    <button class="dropbtn">Games
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
