made the index a bit more SCHMEXY

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@ Title1 {
     </div>
   </div> 
 </div>
-
-</script>
+	
 <h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">The InfinityCraft Minecraft Server Network</h1>
 
 <div class="description">
@@ -56,14 +55,8 @@ Title1 {
 </div>
 
 <div class="image">
-  <img id="myImg" src="/Assets/craft.png" alt="Banner" style="width:100%;max-width:300px">
+  <img id="myImg" src="/Assets/minecart.png" alt="Banner" style="width:100%;max-width:300px">
 </div>
-
-
-
-
-
-
 
 </body>
 </html>
