--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Title1 {
     </div>
   </div> 
 </div>
-	
+<article>
 <h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">The InfinityCraft Minecraft Server Network</h1>
 
 <div class="description">
@@ -57,6 +57,9 @@ Title1 {
 <div class="image">
   <img id="myImg" src="/Assets/minecart.png" alt="Banner" style="width:100%;max-width:300px">
 </div>
+</article>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script src="darkmode.js"></script>
 
 </body>
 </html>
