--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@ Title1 {
 </style>
 </head>
 <body>
-
+<style>
+body {
+  background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
+}
+</style>
+	
 <div class="topnav">
   <a href="http://www.infinitycraftmc.co.uk">Home</a>
   <a href="https://www.infinitycraftmc.co.uk/About">About</a>
@@ -54,9 +59,6 @@ Title1 {
   
 </div>
 
-<div class="image">
-  <img id="myImg" src="/Assets/minecart.png" alt="Banner" style="width:100%;max-width:300px">
-</div>
 </article>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="darkmode.js"></script>
