--- a/About/index.html
+++ b/About/index.html
@@ -19,6 +19,11 @@ Title1 {
 </style>
 </head>
 <body>
+<style>
+body {
+  background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
+}
+</style>
 
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
