--- a/Status/index.html
+++ b/Status/index.html
@@ -11,6 +11,11 @@ body {
 </style>
 </head>
 <body>
+<style>
+body {
+  background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
+}
+</style>
   <title>InfinityCraft - Bedwars</title>
   <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
   <div class="topnav">
