--- a/punishments/index.html
+++ b/punishments/index.html
@@ -13,6 +13,11 @@ body {
 </style>
 </head>
 <body>
+<style>
+body {
+  background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
+}
+</style>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
