optimising the background images for mobile

--- a/Cities/index.html
+++ b/Cities/index.html
@@ -18,6 +18,7 @@ body {
 <style>
 body {
   background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
+  background-position: top center;
 }
 </style>
 	
