--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Title1 {
 <style>
 body {
   background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
+  background-position: top center;
 }
 </style>
 	
@@ -50,7 +51,7 @@ body {
 <h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">The InfinityCraft Minecraft Server Network</h1>
 
 <div class="description">
-  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">InfinityCraft is a Minecraft multi-server network that you can vibe on.<br>This website is still being developed, if you find a bug, please report it in the bug reports section of our discord server.</p>
+  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">InfinityCraft is a Minecraft server network that you can vibe on.<br>This website is still being developed, if you find a bug, please report it in the bug reports section of our discord server.</p>
   
 </div>
 
