--- a/About/index.html
+++ b/About/index.html
@@ -22,6 +22,7 @@ Title1 {
 <style>
 body {
   background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
+  background-position: top center;
 }
 </style>
 
