--- a/Bedwars/index.html
+++ b/Bedwars/index.html
@@ -14,6 +14,7 @@ body {
 <style>
 body {
   background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
+  background-position: top center;
 }
 </style>
   <title>InfinityCraft - Bedwars</title>
