--- a/SMP/index.html
+++ b/SMP/index.html
@@ -16,6 +16,7 @@ body {
 <style>
 body {
   background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
+  background-position: top center;
 }
 </style>
   <div class="topnav">
