--- a/anoos/index.html
+++ b/anoos/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>croissant</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen" >
+<link rel="stylesheet" href="Nav.css">
 </head>
 <body>
 	
