added comfortaa font to header and madeit h1 instead of h3
i love how im doing all the work instead of end

--- a/Bedwars/index.html
+++ b/Bedwars/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="Nav.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -39,8 +41,9 @@ body {
     </div> 
   </div>
 
-  <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">Bedwars</h3>
-<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This server is currently inactive due ot it being broken, we'll fix it soon.</p>
+<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Bedwars</h1>
+	
+<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This server is currently inactive due to it being broken, we'll fix it soon.</p>
     <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">(We really need to stop procrastinating...)&nbsp;</p>
 	
 </body>
