--- a/Cities/index.html
+++ b/Cities/index.html
@@ -42,7 +42,7 @@ body {
     </div> 
   </div>
 
-<h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">Cities Server</h3>
+<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Cities</h1>
 <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The Cities Server is the server that the staff team actually bother about, it's also the one that people are most familiar with.<br>If you have played InfinityCraft, you've probably been on Cities most of the time since its always online.</p>
 
 </body>
