--- a/SMP/index.html
+++ b/SMP/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="Nav.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -39,7 +41,7 @@ body {
     </div> 
   </div>
 
-  <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">SMP</h3>
+<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">SMP</h1>
     <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The SMP (which stands for Survival Multiplayer) is a chill, survival server.<br>It's basically just survival, but with friends!</p>
 </body>
 </html>
