--- a/Status/index.html
+++ b/Status/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="Nav.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -9,6 +11,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 </style>
+<title>InfinityCraft - Status</title>
 </head>
 <body>
 <style>
@@ -38,9 +41,9 @@ body {
       </div>
     </div> 
   </div>
-
-<p>This is the current status of the server (Credit to NameMC for the HTML template)<br>(If it says 'Can't connect to server.' that means that it is offline)</p>
-
+		   
+<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Server Status</h1>
+	
   <iframe style="width:728px;height:90px;max-width:100%;border:none;display:block;margin:auto" src="https://en.namemc.com/server/play.infinitycraftmc.co.uk/embed" width="728" height="90"></iframe>
 
 </body>
