--- a/About/index.html
+++ b/About/index.html
@@ -46,8 +46,8 @@ body {
     </div> 
   </div>
 
-  <h1 style="text-align: center;color:black;font-family: Oxygen, sans-serif;">About InfinityCraft</h3>
-    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Just a server, yeah, thats it, just a server.&nbsp; &nbsp;&nbsp;</p>
+<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">About InfinityCraft</h1>
+    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Just a server, yeah, thats it, just a server.</p>
 
 </body>
 </html>
