--- a/Status/index.html
+++ b/Status/index.html
@@ -43,6 +43,9 @@ body {
   </div>
 		   
 <h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Server Status</h1>
+
+<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This is the server status of InfinityCraft, if it says "Can't connect to server." That means that the server is offline.<br>(Server Status Banner made by NameMC)</p>
+
 	
   <iframe style="width:728px;height:90px;max-width:100%;border:none;display:block;margin:auto" src="https://en.namemc.com/server/play.infinitycraftmc.co.uk/embed" width="728" height="90"></iframe>
 
