cum bucket (using preview in dw so i know whats going on instead of coding blindly)

--- a/punishments/index.html
+++ b/punishments/index.html
@@ -43,8 +43,16 @@ body {
 
 <h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Punishment Appeals</h1>
 	
-<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">If you would like to make a punishment appeal, please email <b>punishmentappeals@infinitycraftmc.co.uk</b> with this format:<br>Username:<br>Where the Punishment Was:<br>What the Punishment Was:<br>The Reason for the Punishment:<br>Who Punished You:<br>Date of Punishment (dd/MM/yyyy):<br>Duration of Punishment:<br>Why you should be Unbanned/Unmuted/Other:</p>
-
+<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">If you would like to make a punishment appeal, please email <b>punishmentappeals@infinitycraftmc.co.uk</b> with this format:</p>
+<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;"><br>
+  Username:<br>
+  Where the Punishment Was:<br>
+  What the Punishment Was:<br>
+  The Reason for the Punishment:<br>
+  Who Punished You:<br>
+  Date of Punishment (dd/MM/yyyy):<br>
+  Duration of Punishment:<br>
+  Why you should be Unbanned/Unmuted/Other:</p>
 <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">For more information, please look at the #punishment-appeals channel in the official Discord server.</p>
 
 </body>
