added background cover to background css
i think i might make a background.css file in the future if i keep changing the background

--- a/Status/index.html
+++ b/Status/index.html
@@ -18,6 +18,9 @@ body {
 body {
   background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
   background-position: top center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 </style>
   <title>InfinityCraft - Bedwars</title>
