--- a/sus/index.html
+++ b/sus/index.html
@@ -14,7 +14,7 @@
 
 <h2>amogus</h2>
 
-<p>never gonna give you up<br>eat your green beans<br>big boi<br>and yo spaghetti<br>pwetty pwetty</p>
+<p>never gonna give you up<br>eat your green beans<br>big boi<br>and yo spaghetti<br>pwetty pwetty<br>ree</p>
 
 <a href="https://www.infinitycraftmc.co.uk">Back to Home Page</a>
 
