--- a/sus/index.html
+++ b/sus/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=OfficialRickAstley">sus</a>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
 <img src="https://infinitycraftmc.co.uk/Assets/SUS.jpg" alt="Sus" width="100" height="100">
 
 <img src="https://infinitycraftmc.co.uk/Assets/rickroll.jpg" alt="Rickroll" width="100" height="100">
