added a copyright footer

--- a/Bedwars/index.html
+++ b/Bedwars/index.html
@@ -49,5 +49,20 @@ body {
 <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This server is currently inactive due to it being broken, we'll fix it soon.</p>
     <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">(We really need to stop procrastinating...)&nbsp;</p>
 	
+	<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: gray;
+  text-align: center;
+}
+</style>
+
+<div class="footer">
+  <p style="font-family: Oxygen, sans-serif;">© Copyright 2021 InfinityCraft, All Rights Reserved.</p>
+</div>
+	
 </body>
 </html>
