--- a/Cities/index.html
+++ b/Cities/index.html
@@ -48,5 +48,21 @@ body {
 <h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Cities</h1>
 <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The Cities Server is the server that the staff team actually bother about, it's also the one that people are most familiar with.<br>
   If you have played InfinityCraft, you've probably been on Cities most of the time since its always online.<br><br>Fun Fact: The background of this website is actually a screenshot from a city called 'Grass' inside of the cities server.</p>
+	
+<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: gray;
+  text-align: center;
+}
+</style>
+
+<div class="footer">
+  <p style="font-family: Oxygen, sans-serif;">© Copyright 2021 InfinityCraft, All Rights Reserved.</p>
+</div>
+	
 </body>
 </html>
