--- a/SMP/index.html
+++ b/SMP/index.html
@@ -46,5 +46,21 @@ body {
 
 <h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">SMP</h1>
     <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The SMP (which stands for Survival Multiplayer) is a chill, survival server.<br>It's basically just survival, but with friends!</p>
+
+<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: gray;
+  text-align: center;
+}
+</style>
+
+<div class="footer">
+  <p style="font-family: Oxygen, sans-serif;">© Copyright 2021 InfinityCraft, All Rights Reserved.</p>
+	
+</div>	
 </body>
 </html>
