--- a/Status/index.html
+++ b/Status/index.html
@@ -52,5 +52,20 @@ body {
 	
   <iframe style="width:728px;height:90px;max-width:100%;border:none;display:block;margin:auto" src="https://en.namemc.com/server/play.infinitycraftmc.co.uk/embed" width="728" height="90"></iframe>
 
+<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: gray;
+  text-align: center;
+}
+</style>
+
+<div class="footer">
+  <p style="font-family: Oxygen, sans-serif;">© Copyright 2021 InfinityCraft, All Rights Reserved.</p>
+</div>
+	
 </body>
 </html>
