--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@ body {
   
 </div>
 
+<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: gray;
+  text-align: center;
+}
+</style>
+
+<div class="footer">
+  <p style="font-family: Oxygen, sans-serif;">© Copyright 2021 InfinityCraft, All Rights Reserved.</p>
+</div>
+	
 </article>
 
 </body>
