--- a/punishments/index.html
+++ b/punishments/index.html
@@ -54,6 +54,21 @@ body {
   Duration of Punishment:<br>
   Why you should be Unbanned/Unmuted/Other:</p>
 <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">For more information, please look at the #punishment-appeals channel in the official Discord server.</p>
+	
+<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: gray;
+  text-align: center;
+}
+</style>
+
+<div class="footer">
+  <p style="font-family: Oxygen, sans-serif;">© Copyright 2021 InfinityCraft, All Rights Reserved.</p>
+</div>
 
 </body>
 </html>
