--- a/About/index.html
+++ b/About/index.html
@@ -51,6 +51,21 @@ body {
 
 <h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">About InfinityCraft</h1>
     <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Just a server, yeah, thats it, just a server.</p>
+	
+<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: gray;
+  text-align: center;
+}
+</style>
+
+<div class="footer">
+  <p style="font-family: Oxygen, sans-serif;">© Copyright 2021 InfinityCraft, All Rights Reserved.</p>
+</div>
 
 </body>
 </html>
