--- a/sus/index.html
+++ b/sus/index.html
@@ -7,7 +7,8 @@
 <body>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/YBS8rJvxnKo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/YBS8rJvxnKo?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <img src="https://infinitycraftmc.co.uk/Assets/SUS.jpg" alt="Sus" width="100" height="100">
 
@@ -15,7 +16,7 @@
 
 <h2>amogus</h2>
 
-<p>never gonna give you up<br>eat your green beans<br>big boi<br>and yo spaghetti<br>pwetty pwetty<br>ree</p>
+<p>never gonna give you up<br>eat your green beans<br>big boi<br>and yo spaghetti<br>pwetty pwetty<br>ree<br>autoglass repair autoglass replace</p>
 
 <a href="https://www.infinitycraftmc.co.uk">Back to Home Page</a>
 
