--- a/status.html
+++ b/status.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="Nav.css">
+    <link rel="stylesheet" href="Status/Nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@ body {
 }
 </style>
   <title>InfinityCraft - Bedwars</title>
-  <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
+  <link rel="shortcut icon" type="image/jpg" href="Status/Assets/minecart.png"/>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
