--- a/status.html
+++ b/status.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="Status/Nav.css">
+    <link rel="stylesheet" href="Nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
